fix some layout problems

--- a/src/pages/RegisterEpisodes/styles.scss
+++ b/src/pages/RegisterEpisodes/styles.scss
@@ -6,9 +6,8 @@
         grid-template-columns: 1.2fr 0.8fr;
         grid-column-gap: 12rem;
 
-
         .input-episodes {
-            margin-bottom: 4rem;
+            margin-bottom: 3rem;
         }
 
     }
